# testbuild6

./: .gitignore  README.md  env.example  env.sample  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py
backend/routers/: __init__.py  internal.py  operators.py
bot/: __init__.py  config.py  faq.py  history_client.py  main.py  operators.py  queue.py  sessions.py  storage.py  templates.py
infra/: backend.Dockerfile  bot.Dockerfile  docker-compose.yml
shared/: __init__.py  enums.py  schemas.py
src/: bot.py  config.py  managers.py  storage.py
