[project]
name = "shop-support-bot"
version = "0.1.0"
description = "Telegram операторский чат-бот с очередью клиентов и автоответами"
authors = [{ name = "Shop Bot", email = "support@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8.0",
    "anyio>=4.3,<5.0"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

